@@ -2,6 +2,7 @@ package com.dua3.utility.data;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -11,7 +12,7 @@ class FilterIteratorTest {
 
     @Test
     public void testEmpty() {
-        List<Integer> items = List.of();
+        List<Integer> items = Arrays.asList();
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->true);
         assertFalse(fi.hasNext());
@@ -19,7 +20,7 @@ class FilterIteratorTest {
 
     @Test
     public void testAllMatching() {
-        List<Integer> items = List.of(1,2,3);
+        List<Integer> items = Arrays.asList(1,2,3);
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->true);
         assertTrue(fi.hasNext());
@@ -33,7 +34,7 @@ class FilterIteratorTest {
 
     @Test
     public void testNonMatching() {
-        List<Integer> items = List.of(1,2,3);
+        List<Integer> items = Arrays.asList(1,2,3);
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->false);
         assertFalse(fi.hasNext());
@@ -42,7 +43,7 @@ class FilterIteratorTest {
 
     @Test
     public void testSomeMatchingFirstNonMatching() {
-        List<Integer> items = List.of(1,2,3,4,5,6,7,8,9,10);
+        List<Integer> items = Arrays.asList(1,2,3,4,5,6,7,8,9,10);
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->i%3==0);
         assertTrue(fi.hasNext());
@@ -56,7 +57,7 @@ class FilterIteratorTest {
 
     @Test
     public void testSomeMatchingFirstMatching() {
-        List<Integer> items = List.of(1,2,3,4,5,6,7,8,9,10);
+        List<Integer> items = Arrays.asList(1,2,3,4,5,6,7,8,9,10);
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->(i&1)==1);
         assertTrue(fi.hasNext());
@@ -74,7 +75,7 @@ class FilterIteratorTest {
 
     @Test
     public void testSomeMatchingLastMatching() {
-        List<Integer> items = List.of(1,2,3,4,5,6,7,8,9,10);
+        List<Integer> items = Arrays.asList(1,2,3,4,5,6,7,8,9,10);
 
         Iterator<Integer> fi = new FilterIterator<>(items.iterator(), i->i%2==0);
         assertTrue(fi.hasNext());
